[project]
name = "muqarnas"
version = "0.0.2"
authors = [
  { name="Zhao Liang", email="mathzhaoliang@gmail.com" },
]
description = "A Python package for rendering beautiful geometry objects"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/neozhaoliang/muqarnas"